[package]
name = "winrk"
version = "0.1.4"
edition = "2024"
authors = ["Alexander Fomalhaut <alexfomalhaut@gmail.com>"]
description = "Winrk is an HTTP benchmarking tool for Windows users, inspired by wrk."
readme = "README.md"
homepage = "https://github.com/fomalhaut88/winrk"
repository = "https://github.com/fomalhaut88/winrk"
keywords = ["benchmark", "http", "load-testing", "performance", "windows"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
